src/examples/invalid/static/mat-inconsistent-size.ra
func main(): void {
  a = [[1], [2, 3]];
  a[1][2] = 1;
  print(a[1][2]);
}
